[package]
name = "interledger-packet"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Interledger packet serialization/deserialization"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
bytes05 = { package = "bytes", version = "0.5", default-features = false, features = ["serde"] }
bytes = { version = "0.4.12", default-features = false, features = ["serde"] }
chrono = { version = "0.4.9", default-features = false, features = ["std"] }
hex = { version = "0.4.0", default-features = false }
thiserror = { version = "1.0.10", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
regex = { version ="1.3.1", default-features = false, features = ["std"] }
once_cell = { version = "1.3.1", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.3.0", default-features = false }
# "serde" is both here and in `[dependencies]` to ensure it is included during
# testing, but optional otherwise.
serde = { version = "1.0.99", default-features = false, features = ["derive"]  }
serde_test = { version = "1.0", default-features = false }

[[bench]]
name = "packets"
harness = false
