[package]
name = "interledger-rates"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Exchange rate utilities"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0" }

futures = { version = "0.3.7", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
once_cell = { version = "1.3.1", default-features = false }
reqwest = { version = "0.11.4", default-features = false, features = ["default-tls", "json"] }
secrecy = { version = "0.8", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"]}
tokio = { version = "1.9.0", default-features = false, features = ["macros", "time", "sync"] }
