[package]
name = "interledger-router"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Router for Interledger requests"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
parking_lot = { version = "0.9.0", default-features = false }
uuid = { version = "0.8.1", default-features = false, features = ["v4"]}
async-trait = "0.1.22"

[dev-dependencies]
once_cell = "1.3.1"
tokio = { version = "0.2.6", features = ["rt-core", "macros"]}
interledger-errors = { path = "../interledger-errors", version = "^0.1.0", default-features = false }
