[package]
name = "interledger-router"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Router for Interledger requests"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

tracing = { version = "0.1.12", default-features = false, features = ["log"] }
parking_lot = { version = "0.10.0", default-features = false }
uuid = { version = "0.8.1", default-features = false, features = ["v4"]}
async-trait = { version = "0.1.22", default-features = false }

[dev-dependencies]
once_cell = { version = "1.3.1", default-features = false }
tokio = { version = "1.9.0", default-features = false, features = ["rt", "macros"]}
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
