[package]
name = "interledger-service-util"
version = "0.2.2-alpha.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Small, commonly used Interledger services that don't really fit anywhere else"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = "0.4.12"
byteorder = "1.3.1"
chrono = "0.4.7"
futures = "0.1.25"
hex = "0.3.2"
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-settlement = { path = "../interledger-settlement", version = "^0.1.1-alpha.1"}
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
lazy_static = "1.4.0"
log = "0.4.6"
reqwest = "0.9.20"
ring = "0.14.6"
secrecy = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.100", features = ["derive"]}
tokio = "0.1.16"
tokio-executor = "0.1.7"
