[package]
name = "interledger-service-util"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Small, commonly used Interledger services that don't really fit anywhere else"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "1.0.0", default-features = false, features = ["settlement_api"] }

bytes = { version = "1.0.1", default-features = false }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }
futures = { version = "0.3.7", default-features = false }
once_cell = { version = "1.3.1", default-features = false, features = ["std"] }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
reqwest = { version = "0.10.0", default-features = false, features = ["default-tls"] }
ring = { version = "0.16.9", default-features = false }
secrecy = { version = "0.8", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"]}
tokio = { version = "0.2.6", default-features = false, features = ["macros", "time"] }
async-trait = { version = "0.1.22", default-features = false }
uuid = { version = "0.8.1", default-features = false }

[dev-dependencies]
uuid = { version = "0.8.1", default-features = false}
once_cell = { version = "1.3.1", default-features = false }
parking_lot = { version = "0.10.0", default-features = false }
mockito = { version = "0.23.0", default-features = false }
url = { version = "2.1.1", default-features = false }
