[package]
name = "interledger-service"
version = "0.3.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "The core abstraction for the Interledger.rs implementation"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = []
trace = ["tracing-futures"]

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = true }
interledger-packet = { path = "../interledger-packet", version = "^0.3.0", default-features = false, features = ["serde"]}
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
base64 = { version = "0.10.1", default-features = false }
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode-perl"] }
ring = { version = "0.16.9", default-features = false }
secrecy = { version = "0.5.0", default-features = false, features = ["serde", "bytes"] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
redis = { version = "0.13.0", default-features = false, optional = true }
tracing-futures = { version = "0.1.1", default-features = true, features = ["tokio", "futures-01"], optional = true }
unicase = { version = "2.5.1", default-features = false }
unicode-normalization = { version = "0.1.8", default-features = false }
url = { version = "2.1.0", default-features = false, features = ["serde"] }
uuid = { version = "0.7.4", default-features = false, features = ["serde", "v4"] }
zeroize = { version = "1.0.0", default-features = false, features = ["bytes"] }

[dev-dependencies]
serde_json = { version = "1.0.41", default-features = false }
