[package]
name = "interledger-service"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "The core abstraction for the Interledger.rs implementation"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = []
trace = ["tracing-futures"]

[dependencies]
futures = { version = "0.1.29", default-features = true }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
base64 = { version = "0.10.1", default-features = false }
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode-perl"] }
lazy_static = { version = "1.4.0", default-features = false }
tracing-futures = { version = "0.1.1", default-features = true, features = ["tokio", "futures-01"], optional = true }
unicase = { version = "2.5.1", default-features = false }
unicode-normalization = { version = "0.1.8", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.41", default-features = false }
