[package]
name = "interledger-service"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "The core abstraction for the Interledger.rs implementation"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[features]
default = []
trace = ["tracing-futures"]

[dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }

futures = { version = "0.3.1", default-features = false }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode-perl"] }
once_cell = { version = "1.3.1", default-features = false, features = ["std"] }
unicase = { version = "2.5.1", default-features = false }
unicode-normalization = { version = "0.1.8", default-features = false }
uuid = { version = "0.8.1", default-features = false}
async-trait = { version = "0.1.22", default-features = false }

#trace feature
tracing-futures = { version = "0.2.1", default-features = false, features = ["std", "futures-03"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.41", default-features = false }
