[package]
name = "interledger-settlement-engines"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
tower-web = "0.3.7"
hex = "0.3.2"
ethereum-tx-sign = { git = "https://github.com/gakonst/ethereum-tx-sign", branch = "update-deps" }
web3 = "0.8.0"
log = "0.4.6"
tokio = "0.1.21"
hyper = "0.12.31"
futures = "0.1.25"
interledger-service = { path = "../interledger-service", version = "0.2.1" }
interledger-settlement = { path = "../interledger-settlement", version = "0.1.0" }
interledger-service-util = { path = "../interledger-service-util", version = "0.2.1" }
interledger-ildcp = { path = "../interledger-ildcp", version = "0.2.1" }
ethabi = "8.0.1"
serde = "1.0.99"
serde_json = "1.0.40"
json = "0.11.14"
bytes = "0.4.12"
ring = "0.14.6"
tokio-executor = "0.1.8"
url = "2.1.0"
reqwest = "0.9.20"
env_logger = "0.6.2"
uuid = { version = "0.7.4", features = ["serde", "v4"]  }
tokio-retry = "0.2.0"
redis = "0.12.0"
http = "0.1.17"
clap = "2.32.0"
clarity = "0.1.22"
sha3 = "0.8.2"
num-bigint = "0.2.2"
num-traits = "0.2.8"
lazy_static = "1.3.0"
config = "0.9.3"
rust-ini = "0.13"
serde-hjson = "0.8.2"
toml = "0.4.1"
yaml-rust = "0.4"
libc = "0.2.62"

[dev-dependencies]
lazy_static = "1.3"
mockito = "0.20.0"
parking_lot = "0.9.0"
net2 = "0.2.33"
os_type = "2.2.0"
rand = "0.7.0"
interledger = { path = "../interledger", version = "0.4.0" }
interledger-packet = { path = "../interledger-packet", version = "0.2.1" }
interledger-store-redis = { path = "../interledger-store-redis", version = "0.2.1" }
