[package]
name = "interledger-settlement-engines"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
tower-web = { version = "0.3.7", default-features = false }
hex = { version = "0.3.2", default-features = false }
web3 = { version = "0.8.0", default-features = false }
log = { version = "0.4.6", default-features = false }
tokio = { version = "0.1.21", default-features = false }
hyper = { version = "0.12.31", default-features = false }
futures = { version = "0.1.25", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-settlement = { path = "../interledger-settlement", version = "^0.1.1-alpha.1"}
interledger-service-util = { path = "../interledger-service-util", version = "^0.2.2-alpha.1"}
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
ethabi = { version = "8.0.1", default-features = false }
serde = { version = "1.0.99", default-features = false }
serde_json = { version = "1.0.40", default-features = false }
json = { version = "0.11.14", default-features = false }
bytes = { version = "0.4.12", default-features = false }
ring = { version = "0.14.6", default-features = false }
tokio-executor = { version = "0.1.8", default-features = false }
url = { version = "2.1.0", default-features = false }
reqwest = { version = "0.9.20", default-features = false }
env_logger = { version = "0.6.2", default-features = false }
uuid = { version = "0.7.4", default-features = false, features = ["serde", "v4"]  }
tokio-retry = { version = "0.2.0", default-features = false }
redis = { version = "0.12.0", default-features = false }
http = { version = "0.1.17", default-features = false }
clap = { version = "2.32.0", default-features = false }
clarity = { version = "0.1.22", default-features = false }
sha3 = { version = "0.8.2", default-features = false }
num-bigint = { version = "0.2.2", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
secrecy = { version = "0.4.0", default-features = false, features = ["serde", "bytes"] }
zeroize = { version = "0.10.1", default-features = false, features = ["bytes"] }
parking_lot = { version = "0.9.0", default-features = false }
config = { version = "0.9.3", default-features = false, features = [ "json", "yaml" ] }
libc = { version = "0.2.62", default-features = false }
tiny-keccak= {version = "1.4.2", default-features = false, optional = true }
secp256k1 = {version = "0.12", default-features = false, optional = true }
rlp = { version = "0.4.2", default-features = false, optional = true }
ethereum-types = { version = "0.6.0", default-features = false, optional = true }


[dev-dependencies]
lazy_static = { version = "1.3", default-features = false }
mockito = { version = "0.20.0", default-features = false }
parking_lot = { version = "0.9.0", default-features = false }
net2 = { version = "0.2.33", default-features = false }
os_type = { version = "2.2.0", default-features = false }
rand = { version = "0.7.0", default-features = false }
interledger = { path = "../interledger", version = "^0.4.1-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-store-redis = { path = "../interledger-store-redis", version = "^0.2.2-alpha.1"}

[features]
ethereum = ["tiny-keccak", "secp256k1", "rlp", "ethereum-types"]
