[package]
name = "interledger-settlement"
version = "0.2.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Settlement-related components for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.29", default-features = false }
hyper = { version = "0.12.35", default-features = false }
interledger-http = { path = "../interledger-http", version = "^0.3.0", default-features = false, features = ["idempotency"] }
interledger-packet = { path = "../interledger-packet", version = "^0.3.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.3.0", default-features = false }
log = { version = "0.4.8", default-features = false }
reqwest = { version = "0.9.22", default-features = false, features = ["default-tls"] }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
url = { version = "2.1.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
uuid = { version = "0.7.4", default-features = false }
ring = { version = "0.16.9", default-features = false }
tokio-retry = { version = "0.2.0", default-features = false }
tokio = { version = "0.1.22", default-features = false }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
num-traits = { version = "0.2.8", default-features = false }
warp = { version = "0.1.20", default-features = false }

[dev-dependencies]
parking_lot = { version = "0.9.0", default-features = false }
mockito = { version = "0.21.0", default-features = false }
env_logger = { version = "0.7.0", default-features = false }
