[package]
name = "interledger-settlement"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Settlement-related components for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-errors = { path = "../interledger-errors", version = "1.0.0", default-features = false, features = ["redis_errors"] }
interledger-packet = { path = "../interledger-packet", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }

bytes = { version = "1.0.1", default-features = false, features = ["serde"] }
futures = { version = "0.3.7", default-features = false }
hyper = { version = "0.13.1", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
reqwest = { version = "0.10", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
url = { version = "2.1.1", default-features = false }
once_cell = { version = "1.3.1", default-features = false, features = ["std"] }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
ring = { version = "0.16.9", default-features = false }
tokio = { version = "1.9.0", default-features = false, features = ["macros", "rt"] }
num-bigint = { version = "0.2.3", default-features = false, features = ["std"] }
num-traits = { version = "0.2.8", default-features = false }
warp = { version = "0.2", default-features = false }
http = { version = "0.2.0", default-features = false }
redis_crate = { package = "redis", version = "0.21.0", optional = true, default-features = false, features = ["tokio-comp"] }
async-trait = { version = "0.1.22", default-features = false }
futures-retry = { version = "0.4.0", default-features = false }

[dev-dependencies]
parking_lot = { version = "0.10.0", default-features = false }
mockito = { version = "0.23.1", default-features = false }
socket2 = "0.3.15"
rand = { version = "0.7.2", default-features = false }

[features]
settlement_api = []
backends_common = ["redis"]
redis = ["redis_crate"]
