[package]
name = "interledger-spsp"
version = "0.2.2-alpha.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the Simple Payment Setup Protocol (SPSP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
base64 = { version = "0.10.1", default-features = false }
bytes = { version = "0.4.12", default-features = false }
failure = { version = "0.1.5", default-features = false }
futures = { version = "0.1.25", default-features = false }
hyper = { version = "0.12.25", default-features = false }
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1", features = ["serde"] }
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-stream = { path = "../interledger-stream", version = "^0.2.2-alpha.1"}
log = { version = "0.4.6", default-features = false }
reqwest = { version = "0.9.11", default-features = false }
serde = { version = "1.0.99", default-features = false }
serde_derive = { version = "1.0.89", default-features = false }
serde_json = { version = "1.0.39", default-features = false }
