[package]
name = "interledger-spsp"
version = "0.4.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the Simple Payment Setup Protocol (SPSP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
base64 = { version = "0.10.1", default-features = false }
bytes = { version = "0.4.12", default-features = false }
failure = { version = "0.1.5", default-features = false }
futures = { version = "0.1.29", default-features = false }
hyper = { version = "0.12.35", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", features = ["serde"], default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "^0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
reqwest = { version = "0.9.22", default-features = false, features = ["default-tls"] }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
