[package]
name = "interledger-spsp"
version = "1.0.0"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Client and server implementations of the Simple Payment Setup Protocol (SPSP)"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-packet = { path = "../interledger-packet", version = "1.0.0", features = ["serde"], default-features = false }
interledger-rates = { path = "../interledger-rates", version = "1.0.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "1.0.0", default-features = false }
interledger-stream = { path = "../interledger-stream", version = "1.0.0", default-features = false }

base64 = { version = "0.11.0", default-features = false }
bytes = { version = "1.0.1", default-features = false }
futures = { version = "0.3.7", default-features = false }
hyper = { version = "0.14.11", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }
reqwest = { version = "0.11.4", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.101", default-features = false }
serde_json = { version = "1.0.41", default-features = false }
thiserror = { version = "1.0.10", default-features = false }

[dev-dependencies]
tokio = { version = "1.9.0", default-features = false, features = ["macros"] }
