[package]
name = "interledger-store-common"
version = "0.1.0"
authors = ["Ben Striegel <bstriegel@ripple.com>"]
description = "Common facilities for Interledger backend stores"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
interledger-api = { path = "../interledger-api", version = "^0.3.0", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "^0.4.0", default-features = false }
interledger-ccp = { path = "../interledger-ccp", version = "^0.3.0", default-features = false }
interledger-http = { path = "../interledger-http", version = "^0.4.0", default-features = false }
interledger-packet = { path = "../interledger-packet", version = "^0.4.0", default-features = false }
interledger-service = { path = "../interledger-service", version = "^0.4.0", default-features = false }
interledger-service-util = { path = "../interledger-service-util", version = "^0.4.0", default-features = false }
interledger-settlement = { path = "../interledger-settlement", version = "^0.3.0", default-features = false }

bytes = { version = "0.4.12", default-features = false }
log = { version = "0.4.8", default-features = false }
redis = { version = "0.13.0", default-features = false, features = ["executor"] }
ring = { version = "0.16.9", default-features = false }
secrecy = { version = "0.5.0", default-features = false, features = ["serde", "bytes"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
url = { version = "2.1.0", default-features = false, features = ["serde"] }
uuid = { version = "0.7.4", default-features = false, features = ["serde"] }
zeroize = { version = "1.0.0", default-features = false, features = ["bytes"] }

[dev-dependencies]
lazy_static = { version = "1.4.0", default-features = false }

