[package]
name = "interledger-store-memory"
version = "0.2.2-alpha.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "In-memory data store for Interledger.rs"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
futures = { version = "0.1.25", default-features = false }
interledger-btp = { path = "../interledger-btp", version = "^0.2.2-alpha.1"}
interledger-http = { path = "../interledger-http", version = "^0.2.2-alpha.1"}
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
interledger-router = { path = "../interledger-router", version = "^0.2.2-alpha.1"}
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-service-util = { path = "../interledger-service-util", version = "^0.2.2-alpha.1"}
parking_lot = { version = "0.7.1", default-features = false }
url = { version = "2.1.0", default-features = false }
