[package]
name = "interledger-store-redis"
version = "0.2.2-alpha.1"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Data store for Interledger.js using Redis"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[lib]
name = "interledger_store_redis"
path = "src/lib.rs"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
clap = { version = "2.32.0", default-features = false }
futures = { version = "0.1.25", default-features = false }
interledger-api = { path = "../interledger-api", version = "^0.1.1-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-btp = { path = "../interledger-btp", version = "^0.2.2-alpha.1"}
interledger-ccp = { path = "../interledger-ccp", version = "^0.1.1-alpha.1"}
interledger-http = { path = "../interledger-http", version = "^0.2.2-alpha.1"}
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
interledger-router = { path = "../interledger-router", version = "^0.2.2-alpha.1"}
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-service-util = { path = "../interledger-service-util", version = "^0.2.2-alpha.1"}
interledger-settlement = { path = "../interledger-settlement", version = "^0.1.1-alpha.1"}
lazy_static = { version = "1.3.0", default-features = false }
log = { version = "0.4.6", default-features = false }
parking_lot = { version = "0.7.1", default-features = false }
redis = { version = "0.12.0", default-features = true }
ring = { version = "0.14.6", default-features = false }
serde = { version = "1.0.99", default-features = false, features = ["derive"] }
stream-cancel = { version = "0.4.4", default-features = false }
tokio-executor = { version = "0.1.6", default-features = false }
tokio-timer = { version = "0.2.10", default-features = false }
url = { version = "2.1.0", default-features = false, features = ["serde"] }
http = { version = "0.1.17", default-features = false }
uuid = { version = "0.7.4", default-features = false, features = ["serde"] }
secrecy = { version = "0.4.0", default-features = true, features = ["serde", "bytes"] }
zeroize = { version = "0.10.1", default-features = false, features = ["bytes"] }

[dev-dependencies]
env_logger = { version = "0.6.1", default-features = false }
net2 = { version = "0.2.33", default-features = false }
rand = { version = "0.6.5", default-features = false }
tokio = { version = "0.1.18", default-features = false }
os_type = { version = "2.2", default-features = false }
