[package]
name = "interledger-store-redis"
version = "0.2.2-beta.2"
authors = ["Evan Schwartz <evan@ripple.com>"]
description = "Data store for Interledger.js using Redis"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/interledger-rs/interledger-rs"

[lib]
name = "interledger_store_redis"
path = "src/lib.rs"

[dependencies]
bytes = "0.4.12"
clap = "2.32.0"
futures = "0.1.25"
interledger-api = { path = "../interledger-api", version = "^0.1.1-alpha.1"}
interledger-packet = { path = "../interledger-packet", version = "^0.2.2-alpha.1"}
interledger-btp = { path = "../interledger-btp", version = "^0.2.2-alpha.1"}
interledger-ccp = { path = "../interledger-ccp", version = "^0.1.1-alpha.1"}
interledger-http = { path = "../interledger-http", version = "^0.2.2-alpha.1"}
interledger-ildcp = { path = "../interledger-ildcp", version = "^0.2.2-alpha.1"}
interledger-router = { path = "../interledger-router", version = "^0.2.2-alpha.1"}
interledger-service = { path = "../interledger-service", version = "^0.2.2-alpha.1"}
interledger-service-util = { path = "../interledger-service-util", version = "^0.2.2-alpha.1"}
interledger-settlement = { path = "../interledger-settlement", version = "^0.1.1-alpha.1"}
interledger-stream = { path = "../interledger-stream", version = "^0.2.2-alpha.1"}
lazy_static = "1.4.0"
log = "0.4.6"
parking_lot = "0.7.1"
redis = "0.12.0"
ring = "0.14.6"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
stream-cancel = "0.4.4"
tokio-executor = "0.1.6"
tokio-timer = "0.2.10"
url = { version = "2.1.0", features = ["serde"] }
http = "0.1.17"
uuid = { version = "0.7.4", features = ["serde"] }
secrecy = { version = "0.4.0", features = ["serde", "bytes"] }
zeroize = { version = "0.10.1", features = ["bytes"] }
num-bigint = "0.2.3"

[dev-dependencies]
env_logger = "0.6.1"
net2 = "0.2.33"
rand = "0.6.5"
tokio = "0.1.18"
os_type="2.2"
